kubernetes/apps/default/hajimari/ingressRoute.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hajimari-service-extname
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/hostname: hajimari.porkboi.io
  labels:
    app.kubernetes.io/name: hajimari
spec:
  type: ExternalName
  externalName: porkboi.io
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hajimari-web
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`hajimari.porkboi.io`)
      services:
        - name: hajimari
          port: 3000
      middlewares:
        - name: redirect-https
          namespace: networking
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hajimari
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`hajimari.porkboi.io`)
      services:
        - name: hajimari
          port: 3000
